tests/error/misc_errors/nested_arg_flag.err
Error: Invalid type argument (at $FILE:12:16)
   | 
10 | 
11 | @guppy.declare(module)
12 | def foo(x: list[qubit @owned]) -> qubit: ...
   |                 ^^^^^^^^^^^^ Not a valid type argument

Guppy compilation failed due to 1 previous error
